high-contrast.less: Fix notifications success color contrast
refs #4337

--- a/public/css/themes/high-contrast.less
+++ b/public/css/themes/high-contrast.less
@@ -222,3 +222,7 @@ input.search {
     border-left: none;
   }
 }
+
+#notifications > li.success {
+  color: @text-color;
+}
